src/test/resources/rules/fail/EmptyLineSeparatorCheck.java
package rules.fail;

public class EmptyLineSeparatorCheck {
    public void method() {
        System.out.println("Hello World");

        System.out.println("Hello World");


        System.out.println("Hello World");
    }
}
